tests/test_files_pa3/new/SemanticErrors/badScope_1.ic
class A {

     static void main(string[] args){}
     
     void badScope1() {
           
           string a;
            
           {
                int a = a;
           }
           
          

     }
     
     int a;
    
}